--- a/res/layout/activity_resultform.xml
+++ b/res/layout/activity_resultform.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.btvn5.Resultform" >
+    tools:context="com.example.btvn5.resultform" >
 
     <TextView
         android:id="@+id/textView1"
