--- a/res/layout/activity_registerform.xml
+++ b/res/layout/activity_registerform.xml
@@ -151,33 +151,12 @@
         android:text="Hobbies"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <GridLayout
+    <GridView
+        android:id="@+id/gridHobbies"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:columnCount="1" >
-
-        <CheckBox
-            android:id="@+id/checkBox1"
-            android:layout_column="0"
-            android:layout_gravity="left|top"
-            android:layout_row="0"
-            android:text="Tennis" />
-
-        <CheckBox
-            android:id="@+id/checkBox2"
-            android:layout_column="0"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="0"
-            android:text="Fulbal" />
-
-        <CheckBox
-            android:id="@+id/checkBox3"
-            android:layout_column="0"
-            android:layout_gravity="right|top"
-            android:layout_row="0"
-            android:text="Others" />
-    </GridLayout>
+        android:numColumns="3" >
+    </GridView>
 
     <GridLayout
         android:layout_width="match_parent"
